--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,10 +13,10 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   #cname: demo.upptime.js.org
   # baseUrl: /your-repo-name
-  baseUrl: /repo
+  baseUrl: /pidge-uptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Pidge Uptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  introTitle: "Pidgepost status page poweed by Upptime if it actually works."
   introMessage: Pidgepost.com status
   navbar:
     - title: Status
