--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,9 +14,9 @@ status-website:
   #cname: demo.upptime.js.org
   # baseUrl: /your-repo-name
   baseUrl: /pidge-uptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://pidgepost.com/wp-content/uploads/2021/06/Pidge-Post-Logo-Set_Pidge-Post-icon-1200x1200-circle-1-e1624061645186.png
   name: Pidge Uptime
-  introTitle: "Pidgepost status page poweed by Upptime if it actually works."
+  introTitle: "Pidgepost status page poweed by Upptime"
   introMessage: Pidgepost.com status
   navbar:
     - title: Status
